# streamlit-passwordless-app

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
conda/: streamlit_passwordless_app_dev.yml  streamlit_passwordless_app_dev_linux-64_lock.yml
pages/: register_and_sign_in.py
streamlit_passwordless_app/: __init__.py  auth.py  config.py  main.py
streamlit_passwordless_app/components/: __init__.py  buttons.py  ids.py  sidebars.py
streamlit_passwordless_app/controllers/: __init__.py  home.py  register_and_sign_in.py
streamlit_passwordless_app/views/: __init__.py  home.py  register_and_sign_in.py
